--- a/style.css
+++ b/style.css
@@ -676,3 +676,9 @@ nav.navbar li {
 .slider__item {
   padding: 10px; 
 }
+.anchor {
+  display: block;
+  position: relative;
+  top: -46px;
+  visibility: hidden;
+}
