--- a/slider.css
+++ b/slider.css
@@ -13,12 +13,24 @@
 	max-width: 100%;
 }
 @media (min-width: 650px) {
+	#sponsorsSlider .slider__item {
+		flex: 0 0 33.3%;
+		max-width: 33.3%;	
+	}
 	.slider__item {
 		flex: 0 0 50%;
 		max-width: 50%;
 	}
 }
 @media (min-width: 980px) {
+	#news .slider__item {
+		flex: 0 0 25%;
+		max-width: 25%;
+	}
+	#sponsorsSlider .slider__item {
+		flex: 0 0 25%;
+		max-width: 25%;	
+	}
 	.slider__item {
 		flex: 0 0 33.3%;
 		max-width: 33.3%;
