--- a/slider.css
+++ b/slider.css
@@ -13,27 +13,27 @@
 	max-width: 100%;
 }
 @media (min-width: 650px) {
-	#sponsorsSlider .slider__item {
+	/*#sponsorsSlider .slider__item {
 		flex: 0 0 33.3%;
 		max-width: 33.3%;	
-	}
+	}*/
 	.slider__item {
-		flex: 0 0 50%;
-		max-width: 50%;
+		flex: 0 0 33.33%;
+		max-width: 33.33%;
 	}
 }
 @media (min-width: 980px) {
-	#news .slider__item {
+	/*#news .slider__item {
 		flex: 0 0 25%;
 		max-width: 25%;
 	}
 	#sponsorsSlider .slider__item {
 		flex: 0 0 25%;
 		max-width: 25%;	
-	}
+	}*/
 	.slider__item {
-		flex: 0 0 33.3%;
-		max-width: 33.3%;
+		flex: 0 0 25%;
+		max-width: 25%;
 	}
 }
 
